--- a/src/main/webapp/homePage.html
+++ b/src/main/webapp/homePage.html
@@ -6,89 +6,14 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <title>首页</title>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <link rel="stylesheet" href="Css/bootstrap/3.3.6/bootstrap.min.css">
     <script src="Js/jquery.min.js"></script>
+    <link rel="stylesheet" href="Css/bootstrap/3.3.6/bootstrap.css">
+    <link rel="stylesheet" href="Css/jquery-ui.min.css" type="text/css">
     <script src="Js/bootstrap.min.js"></script>
-    <style>
-        *{
-            border: 0px;
-            padding: 0px;
-            margin: 0px;
-        }
-        body{
-            height: 1300px;
-            width: 100%;
-            background-color: #2a2a2a;
-            /*color: white;*/
-        }
-        #container{
-            /*height: 1300px;*/
-            width: 75%;
-            margin: 1px auto 1px auto;
-            background-color: white;
-            /*opacity: 0.8;*/
-            border-radius: 10px;
-            box-shadow: 0px 1px 2px black;
-        }
-        #logo{
-            width: 100%;
-            height: 110px;
-            /*background: red;*/
-        }
-        #logoimg{
-            margin: 5px auto 5px 20px;
-        }
+    <script src="Js/jquery-ui.min.js"></script>
+    <script src="Js/homePage.js"></script>
+    <link rel="stylesheet" href="Css/homePage_style.css" type="text/css">
 
-        .btn{
-            width: 90px;
-            position: relative;
-            float: right;
-            margin: 45px 20px 2px 10px;
-        }
-        #carousel-example-generic{
-             width:100%;
-         }
-        .carousel-inner{
-            height: 500px;
-        }
-        .item{
-            height: 100%;
-            /*height: 500px;*/
-        }
-        .item img{
-            height: 100%;
-            width: 100%;
-        }
-        #introduce_container{
-            width: 100%;
-            height: 350px;
-            margin: 5px 0px;
-            background-color: red;
-        }
-        .introduce{
-            /*position: relative;*/
-            /*float: left;*/
-            width: 100px;
-            height: 100px;
-            /*margin: 15px 46px;*/
-            border: 20px solid white;
-            background: silver;
-            border-radius: 10px;
-        }
-        #large-header{
-            position: absolute;
-            left: 0px;
-            top: 0px;
-            height: 100%;
-            z-index: -2147483645;
-            /*background: none 0% 0% / auto repeat scroll padding-box border-box rgba(0, 0, 0, 0);*/
-            /*height:469px;*/
-        }
-        #demo-canvas{
-            height: 100%;
-            width: 100%;
-        }
-    </style>
 </head>
 
 <body>
@@ -106,9 +31,9 @@
 
         <div id="logo">
             <img id="logoimg" src="img/logo1.png">
-            <button type="button" class="btn btn-default">报名大赛</button>
-            <button type="button" class="btn btn-default">我的大赛</button>
             <button type="button" class="btn btn-default">登    录</button>
+            <button type="button" class="btn btn-default">我的大赛</button>
+            <button type="button" class="btn btn-default">报名大赛</button>
         </div>
         <!--轮播-->
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -123,17 +48,17 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="img/hujing_1.jpg" >
+                    <img src="img/1.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/banner2.png" >
+                    <img src="img/2.jpg">
                 </div>
                 <div class="item">
-                    <img src="img/hujing_2.jpg" >
+                    <img src="img/3.png">
                 </div>
 
                 <div class="item">
-                    <img src="img/banner6.png" >
+                    <img src="img/4.jpg">
                 </div>
 
             </div>
@@ -151,46 +76,28 @@
         </div>
         <!--三个大赛介绍-->
         <h3 align="center">近期精彩大赛介绍</h3>
-        <table id="introduce_container">
-            <tr>
-                <td class="introduce">
-                    <div>
-                    <h4 align="center">蓝桥杯</h4>
-                    <p align="left" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>
-                    </div>
-                </td>
-                <td class="introduce">
-                    <div>
-                        <h4 align="center">蓝桥杯</h4>
-                        <p align="left" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>
-                    </div>
-                </td>
-                <td class="introduce">
-                    <div>
-                        <h4 align="center">蓝桥杯</h4>
-                        <p align="left" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>
-                    </div>
-                </td>
-            </tr>
-        </table>
-        <!--<div id="introduce_container">-->
-            <!--<h3 align="center">近期精彩大赛介绍</h3>-->
-            <!--<div class="introduce">-->
-                <!--<h4 align="center">蓝桥杯</h4>-->
-                <!--<p align="center" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>-->
-            <!--</div>-->
-            <!--<div class="introduce">-->
-                <!--<h4 align="center">蓝桥杯</h4>-->
-                <!--<p align="center" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>-->
-            <!--</div>-->
-            <!--<div class="introduce">-->
-                <!--<h4 align="center">蓝桥杯</h4>-->
-                <!--<p align="center" style="padding: 5px;">为促进软件和信息领域专业技术人才培养，提升高校毕业生的就业竞争力，由教育部就业指导中心支持，工业和信息化部人才交流中心举办蓝桥杯大赛。九年来，包括北大、清华在内的超过 1200 余所院校，累计20万余名学子报名参赛，IBM、百度等知名企业全程参与，成为国内始终领跑的人才培养选拔模式并获得行业深度认可的IT类科技竞赛。</p>-->
-            <!--</div>-->
-
-        <!--</div>-->
+        <div id="introduce_container">
+            <div class="introduce">
+                <!--<div>-->
+                <h4 align="center" class="h4"></h4>
+                <p class="p"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+                <a id="a1">了解详情</a>
+                <!--</div>-->
+            </div>
+            <div class="introduce" >
+                <h4 align="center" class="h4"></h4>
+                <p class="p"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+                <a id="a2">了解详情</a>
+            </div>
+            <div class="introduce">
+                <!--<div>-->
+                <h4 align="center" class="h4"></h4>
+                <p class="p"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+                <a id="a3">了解详情</a>
+                <!--</div>-->
+            </div>
+        </div>
     </div>
-
 </body>
 <footer>
 </footer>
