实现了我的大赛业务层

--- a/src/main/webapp/homePage.html
+++ b/src/main/webapp/homePage.html
@@ -107,7 +107,7 @@
         <div id="logo">
             <img id="logoimg" src="img/logo1.png">
             <button type="button" class="btn btn-default">报名大赛</button>
-            <button type="button" class="btn btn-default">我的大赛</button>
+            <button type="button" class="btn btn-default"><a href="listMyContest?id=1">我的大赛</a></button>
             <button type="button" class="btn btn-default">登    录</button>
         </div>
         <!--轮播-->
