--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -20,13 +20,13 @@
 
     <div class="right">
         <p style="font-size: 30px;text-align: center;margin: 20px auto;">登录</p>
-        <form action="" method="post">
+        <form action="login" method="post">
             <div  id="form">
                 <label>用户名</label>
                 <input type="text" name="userName">
                 <br>
                 <label>密&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-                <input type="text" name="password">
+                <input type="text" name="passWord">
                 <br>
 
                     <button class="btn" type="submit" value="登录">登录</button>
