--- a/src/main/webapp/homePage.html
+++ b/src/main/webapp/homePage.html
@@ -13,7 +13,23 @@
     <script src="Js/jquery-ui.min.js"></script>
     <script src="Js/homePage.js"></script>
     <link rel="stylesheet" href="Css/homePage_style.css" type="text/css">
-
+    <style>
+        input{
+            margin: 1px 5px;
+            border: 1px solid gainsboro;
+            font-size: 20px;
+            border-radius: 3px;
+            box-shadow: 0px 1px 1px gray;
+            width: 200px;
+        }
+        input[type="text"]:focus,input[type="password"]:focus{
+            font-size: 20px;
+            margin: 1px 5px;
+            border-radius: 3px;
+            box-shadow: 1px 1px 3px #2b669a;
+            border: 1px solid cadetblue;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,7 +47,7 @@
 
         <div id="logo">
             <img id="logoimg" src="img/logo1.png">
-            <button type="button" class="btn btn-default">登    录</button>
+            <button type="button" class="btn btn-default" id="login" data-toggle="modal" data-target="#myModal">登    录</button>
             <button type="button" class="btn btn-default">我的大赛</button>
             <button type="button" class="btn btn-default">报名大赛</button>
         </div>
@@ -97,6 +113,33 @@
                 <!--</div>-->
             </div>
         </div>
+        <!--模态窗口-->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" style="width: 312px;height: 350px;top: 20%">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button data-dismiss="modal" class="close" type="button"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+                        <h4 class="modal-title" align="center">登录</h4>
+                    </div>
+                    <div class="modal-body" style="height: 150px; margin-top: 32px">
+                        <form>
+                            <div align="center"><span class="glyphicon glyphicon-user"></span><input type="text"></div>
+                            <br/>
+                            <div align="center"><span class="glyphicon glyphicon-lock"></span><input type="password"></div>
+                        </form>
+                        <div style="display: none"><br/><span>验证码</span><input type="text"></div>
+                        <a href="#" style="float: left;margin: 5px 4px 3px auto; font-size: 15px">忘记密码</a>
+                        <a href="#" style="float: right;margin: 5px 4px 3px auto; font-size: 15px">注册</a>
+                        <br/>
+                    </div>
+                    <div class="modal-footer">
+                        <button data-dismiss="modal" class="btn btn-default" type="button" style="float: right;margin: 2px 20px">关闭</button>
+                        <button class="btn btn-primary" type="button" style="float: left;margin: 2px 20px">确定</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div>
+        <!--模态窗口-->
     </div>
 </body>
 <footer>
