实现了报名业务层

--- a/src/main/webapp/editRegistrationInformation.html
+++ b/src/main/webapp/editRegistrationInformation.html
@@ -6,9 +6,18 @@
     <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <title>编辑报名信息</title>
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
-    <link rel="stylesheet" href="Css/bootstrap/3.3.6/bootstrap.css">
+    <!--<link rel="stylesheet" href="Css/bootstrap/3.3.6/bootstrap.css">-->
+    <!--<script src="Js/jquery.min.js"></script>-->
+    <!--<script src="Js/bootstrap.min.js"></script>-->
+    <!--<script src="Js/editRegistrationInformation.js"></script>-->
+    <!--<link rel="stylesheet" href="Css/editRegistrationInformation_style.css" type="text/css">-->
+
+
     <script src="Js/jquery.min.js"></script>
+    <link rel="stylesheet" href="Css/bootstrap/3.3.6/bootstrap.css">
+    <link rel="stylesheet" href="Css/jquery-ui.min.css" type="text/css">
     <script src="Js/bootstrap.min.js"></script>
+    <script src="Js/jquery-ui.min.js"></script>
     <script src="Js/editRegistrationInformation.js"></script>
     <link rel="stylesheet" href="Css/editRegistrationInformation_style.css" type="text/css">
 </head>
